--- a/style.css
+++ b/style.css
@@ -22,7 +22,6 @@ body {
 }
 
 /*Mobile First*/
-
 header {
     background-color: var(--azul);
     padding: 10px;
@@ -108,21 +107,64 @@ main h1 {
     padding: 15px;
 }
 
-#div-checkbox {
+/*Switch mobile*/
+#label-checkbox {
     position: relative;
     display: inline-block;
     width: 60px;
-    height: 34px;
+    height: 30px;
 }
 
-#div-checkbox input {
+#label-checkbox input {
     opacity: 0;
     width: 0;
     height: 0;
 }
 
-#slider{
-    
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+input:checked + .slider {
+    background-color: var(--azul);
+}
+
+input:focus + .slider {
+    box-shadow: 0 0 1px var(--azul);
+}
+
+input:checked+.slider::before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.slider.round{
+    border-radius: 34px;
+}
+
+.slider.round:before{
+    border-radius: 50%;
 }
 
 .sections {
