--- a/style.css
+++ b/style.css
@@ -67,10 +67,12 @@ main h1 {
 
 main.hidden{
     display: none;
+    transition: opacity 0.3s ease;
 }
 
 main.visible{
     display: block;
+    transition: opacity 0.3s ease;
 }
 
 #back-arrow {
